<resources>
    <string name="app_name">TK. Aneka Jaya</string>
    <string name="judul">Transaksi</string>
    <string name="namapelanggan">Nama pelanggan</string>
    <string name="namabarang">Nama Barang</string>
    <string name="harga">Harga</string>
    <string name="jumlah">Jumlah</string>
    <string name="total">Total Harga</string>
    <string name="bayar">Jumlah Uang</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="kembalian">Kembalian</string>
    <string name="konfirmdel">Apakah ingin menghapus data transaksi?</string>
    <string name="yes">Iya</string>
    <string name="delberhasil">Data transaksi berhasil dihapus!</string>
    <string name="null_field">%1$s wajib diisi!</string>
    <string name="uang_kurang">Maaf uang anda kurang!</string>
    <string name="hapus">Hapus</string>
    <string name="info">Info</string>
    <string name="submit">SUBMIT</string>
    <string name="update">Update data telah selesai</string>
</resources>