<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:id="@+id/list_datatransaksi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_barang"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_baseline_add_shopping_cart_24"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_tgl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:text="tanggal"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_namapel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/namapelanggan"
                            android:textColor="#474747"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_namabrg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="4dp"
                            android:text="@string/namabarang"
                            android:textColor="#474747"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:padding="2dp"
                            android:layout_marginTop="2dp"
                            android:src="@drawable/rupiah"/>

                        <TextView
                            android:id="@+id/tv_harga"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:text="@string/harga"
                            android:textColor="#474747"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#5E5E5E"/>

    </LinearLayout>
</layout>
